--- a/posts_genomics_and_personalized_medicine.html
+++ b/posts_genomics_and_personalized_medicine.html
@@ -5,132 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ABBB</title>
-
-  <style> 
-
-    *, *::before, *::after {box-sizing: border-box;}
-    html, body {margin:0; padding: 0;}
-
-    body {
-      font-family: "Times New Roman", Times, serif;
-      background: url("cubes.png") repeat, #f8f8f2;
-      background-blend-mode:multiply;
-      background-size: auto;
-    }
-
-    .main-layout {
-      display: grid;
-      grid-template-rows: auto 1fr;
-      grid-template-columns: 1fr 3fr;
-      align-items: center;
-      min-height: 100vh;
-      padding: 0 4vw;
-    }
-
-    .nav-links {
-      grid-row: 1;
-      grid-column: 2;
-      justify-self: end; 
-      align-self: end;     
-      list-style: none;
-      margin: 0 10%;
-      padding: 0px;
-      display: flex;
-      gap: 200px;
-    }
-
-    .nav-links li a {
-      color: #1b1a55;
-      font-weight: bold;
-      font-size: 18px;
-      text-decoration: none;
-    }
-
-    .nav-links a.home:hover {color: #ac0530}
-    .nav-links a.posts:hover {color: #ed7504;}
-    .nav-links a.about:hover {color: #046637;}
-    .nav-links a.contact:hover {color: #3e337c;}
-
-    .logo {
-      grid-row: 1;
-      grid-column: 1;
-      max-width: 250px;
-      width: 100%;
-      height: auto;
-      justify-self: start;
-      margin-top: 5%;
-    }
-
-    .article-title {
-      grid-row: 2;
-      grid-column: 1;
-      max-width: 30%;
-      align-self: start;
-      justify-self: end;
-      margin-top: 16%;
-      color: #1b1a55;
-    }
-
-    .article-title h1 {font-size: 2rem;}
-
-    .article-content {
-      grid-row: 2;
-      grid-column: 2;
-      max-width: 90%;
-      justify-self: center;
-      align-self: start;
-      margin-top: 6%;
-      margin-bottom: 6%;
-      margin-left: 5%;
-      padding-left: 2%;
-      padding-right: 5%;
-      padding-top: 1%;
-      border-left: 1px solid darkred;
-      background: #f8f8f2;
-      
-    }
-
-    .article-content p {
-      text-indent: 2em;
-      line-height: 1.5;
-    }
-
-    .references {
-      grid-row: 2;
-      grid-column: 2;
-      max-width: 80%;
-      justify-self: center;
-      justify-items: center;
-    }
-
-    .references h2 {
-      font-weight: bold;
-      font-size: 1.2rem;
-    }
-
-    .references li {
-      color:black;
-      list-style: none;
-      padding-left: 2em;
-      text-indent: -2em;
-      margin-bottom: 0.5em;
-      line-height: 1.5;
-    }
-
-
-    hr {
-      grid-row: 2;
-      grid-column: 1 / -1;
-      width: 100%;
-      border: none;
-      border-top: 2px solid darkred;
-      margin: 20px 0;
-      align-self: start;
-      justify-self: center;
-    }
-
-  </style>
-
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -146,12 +21,12 @@
       <li><a href="contact.html" class="contact">Contact</a></li>
     </ul>
 
-    <article class="article-title">
+    <article class="title">
       <h1> Genomics and Personalized Medicine: </h1>
       <h2>Towards the Future of Healthcare</h2>
     </article>
 
-    <article class="article-content">
+    <article class="content">
       <p>Diseases such as cancer, neurodegenerative diseases (i.e. Parkinson’s, Alzheimer’s) and mental health disorders, have multifactorial and complex backgrounds involving genetic, environmental, and personal attributes (Yamamoto et al., 2022; Perna & Nemeroff, 2022). Even between patients with the same disease, the pathogenesis and causative factors relating to the disease can vary greatly (Rivenbark et al., 2013). How then, for a specific patient, is it possible to determine the most effective therapeutic strategy? This is where the study of genomics and its application in personalized medicine comes in. With the goal of providing in-depth, individualized patient data, researchers and medical practitioners will be able to better identify specific disease mechanisms, therapeutic targets, and biomarkers for both diagnostics and treatment development, ultimately improving patients’ prognosis and outcomes. </p>
       <p>The study of genomics involves the analysis of the entire genome, including intergenic interactions, and has implications in fields such as transcriptomics and proteomics (National Human Genome Research Institute, 2022; Sadee et al., 2023). Advances in this field, such as next-generation sequencing (NGS), have provided the impetus for rapid developments in its applications (Yamamoto et al., 2022). In cancer research, NGS has been utilized to identify genetic mutations and protein expression patterns in cancer patients, and develop molecular targeted and immunotherapies (Zalis et al., 2024; Zhang et al., 2021). NGS paved the way for whole-genome sequencing (WGS) and genome-wide association studies (GWAS), which have become an invaluable tool in identifying disease-related genomic variants (Yamamoto et al., 2022; Imamura & Maeda, 2024). Recent and ongoing developments in artificial intelligence (A.I.) are also expected to further increase the rate of advancement in genome sequencing and analysis (Sadee et al., 2023).</p>  
       <p>Personalized medicine targets individualized and precise treatment utilizing genetic, environmental, and disease status information specific to each patient (Yamamoto et al., 2022). Thus far, the application of personalized medicine is most prevalent in the treatment of cancer, such as biliary tract cancer, where NGS and personalized medicine ideologies have contributed to the research and development of targeted therapies, significantly improving prognosis and outcome in relation to traditional chemotherapy (Yamamoto et al., 2022; Zhang et al., 2021). Trends in personalized medicine have focused on facilitating better understanding of underlying disease mechanisms, identifying diagnostic markers to ensure accurate diagnosis, and developing therapeutic drugs to accurately target these biomarkers (Sabre et al., 2020). Personalized medicine is also being implemented in psychiatry for the treatment of mental health disorders, which are inherently complex and patient specific (Perna & Nemeroff, 2022).  Furthermore, the cost of treatment is expected to decrease while treatment satisfaction rises, due to personalized medicine precluding the need for therapeutics on a trial-and-error basis (Yamamoto et al., 2022). </p>
