--- a/posts_genomics_and_personalized_medicine.html
+++ b/posts_genomics_and_personalized_medicine.html
@@ -50,7 +50,9 @@
         </section>
     </article>
 
-    
+    <textarea class="footer">
+      © 2025 Aidan O'Maille. All rights reserved.
+    </textarea>
 
     <hr>
 
