formatting changes for article titles

--- a/posts_genomics_and_personalized_medicine.html
+++ b/posts_genomics_and_personalized_medicine.html
@@ -23,7 +23,7 @@
     </ul>
 
     <article class="title">
-      <h1> Genomics and Personalized Medicine: </h1>
+      <h1>Genomics and Personalized Medicine</h1>
       <h2>Towards the Future of Healthcare</h2>
     </article>
 
